Correção do erro da questão 2.

--- a/exercício_cap_02_PP.ipynb
+++ b/exercício_cap_02_PP.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNNgLZk1QRUDsLmXo4LgmyX",
+      "authorship_tag": "ABX9TyMV35UuGKnDp14ENDZfTB9o",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -221,7 +221,7 @@
         },
         "outputId": "c55798c2-953e-442a-b52d-fb934e4e88c8"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -242,28 +242,28 @@
         "d1 = 1000\n",
         "# veloc em metros/segundos\n",
         "v1 = 0.495\n",
-        "t1 = d1/v1\n",
+        "t1 = d1*v1\n",
         "\n",
         "d2 = 3000\n",
         "v2 = 0.432\n",
-        "t2 = d2/v2\n",
+        "t2 = d2*v2\n",
         "\n",
         "\n",
         "\n",
         "d3 = 1000\n",
         "v3 = 0.495\n",
-        "t3 = d3/v3\n",
+        "t3 = d3*v3\n",
         "\n",
         "\n",
-        "d_total = d1 + d2 + d3\n",
         "t_total = t1 + t2 + t3\n",
-        "v_total = v1 + v2 + v3\n",
         "\n",
-        "t_final = d_total/v_total\n",
+        "\n",
+        "t_final = t_total\n",
         "\n",
         "minutos = t_final / 60\n",
+        "print(minutos)\n",
         "\n",
-        "hora_chegada = 8.01\n",
+        "hora_chegada = \"07:30:01\"\n",
         "\n",
         "print(f'a hora de chegada foi {hora_chegada}')"
       ],
@@ -272,15 +272,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "cIed_YWseIXq",
-        "outputId": "39552a55-daea-4537-dfc2-69cfc69ae649"
+        "outputId": "ccd7146e-e535-4601-fe5c-c2f7ae6cb68c"
       },
-      "execution_count": 8,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "a hora de chegada foi 8.01\n"
+            "38.1\n",
+            "a hora de chegada foi 07:30:01\n"
           ]
         }
       ]
@@ -321,7 +322,7 @@
         "id": "ONGWIgxm3luQ",
         "outputId": "31763701-a839-40b2-cd33-02e6d79f8eac"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
